--- a/style.css
+++ b/style.css
@@ -1,5 +1,54 @@
-body {
+  body {
   width: 100%;
   height: 100%;
   margin: 0;
 }
+  body header h1 {
+  text-align: center;
+  }
+  img {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+  nav a {
+    background-color: rgb(212, 174, 128);
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  nav {
+    text-align: center;
+  }
+  figcaption {
+    text-align: center;
+    font-size: smaller;
+  }
+   #featured-property {
+    flex-wrap: wrap;
+    width: 800px;
+    text-align: center;
+    margin-left: 30%;
+      }
+  #details{
+    background-color: red;
+    align-items: center;
+    float: left;
+    width: 100%;
+    display: flex;
+      }
+  .Contact{
+    width: 25%;
+    text-align: center;
+  }
+  .Correspondence{
+    width: 25%;
+    text-align: center;
+  }
+  .Links{
+    width: 25%;
+    text-align: center;
+  }
+  .Follow{
+    width: 25%;
+    text-align: center;
+  }
